--- a/src/Wrap.Unpackager/Wrap.Unpackager.csproj
+++ b/src/Wrap.Unpackager/Wrap.Unpackager.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="WPF-UI" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Wrap\Wrap.csproj" />
+  </ItemGroup>
+
 </Project>
