--- a/src/Wrap.Unpackager/Wrap.Unpackager.csproj
+++ b/src/Wrap.Unpackager/Wrap.Unpackager.csproj
@@ -13,6 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Remove="Assets\Localizations\Localization.ko.xaml" />
+    <Page Remove="Assets\Localizations\Localization.zh-TW.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="WPF-UI" Version="2.0.1" />
   </ItemGroup>
 
@@ -21,10 +26,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Converters\" />
     <Folder Include="Behaviours\" />
     <Folder Include="Validators\" />
     <Folder Include="Utilities\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Assets\Localizations\Localization.ko.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Include="Assets\Localizations\Localization.zh-TW.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
